--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+tags
 # Created by https://www.gitignore.io/api/python,osx,linux
 # Edit at https://www.gitignore.io/?templates=python,osx,linux
 
