--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
   - pytest
-  - black --check -S -l 100 -t py36 **/*.py
+  - black --check -S -l 100 -t py36 spellrst.py tests
   - make test
 
 after_success:
