download spacy model

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ python:
 install:
   - pip install -r test-requirements.txt --progress-bar=off
   - flit install -s
+  - python -m spacy download en_core_web_md
 
 script:
   - black --check -S -l 100 -t py36 spellrst.py tests
