--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,17 @@ author = "Jacques Kvam"
 author-email = "jwkvam+pypi@gmail.com"
 home-page = "https://github.com/jwkvam/spellrst"
 description-file = "README.rst"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7"
+]
 requires = [
     "click",
     "docutils",
-    "spacy"
+    "spacy",
+    "toml"
 ]
 requires-python = ">=3.6"
 
